# edgar-analysis

./: .gitignore  README.md  __init__.py  config.py  edgar_analysis.ipynb  edgar_data.py  edgar_fin_data_services.py  extract_meta.ipynb  extract_meta.py  meta_data.csv  pyproject.toml  tests.ipynb
configs/: df_config.json
edgar_analysis/configs/: config.py
edgar_analysis/edgar_data/: edgar_data.py
edgar_analysis/fin_data_services/: edgar_fin_data_services_update.py
edgar_data/: edgar_data.py
fin_data_services/: edgar_fin_data_services.py
ingest/: extract_meta.py
notebooks/: PEAnalysis.ipynb  test_edgar_data.ipynb
